# uniulm_mensaparser

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_api.py  setup.py
examples/: main.py
mensa_api/: flask_api.py
mensa_parser/: adapter.py  cvzi_mensaparser.py  parser.py  pdf_parser.py  speiseplan_website_parser.py  test_speiseplan_parser.py
src/: pdf_parser.py  speiseplan_website_parser.py  test_pdf_parser.py  test_speiseplan_parser.py
src/mensa_api/: api.py
src/mensa_parser/: pdf_parser.py  speiseplan_website_parser.py  test_pdf_parser.py  test_speiseplan_parser.py
tests/: test_adapter.py  test_html_parser.py  test_model.py  test_parser.py  test_pdf_parser.py  test_speiseplan_website_parser.py  test_studierendenwerk_scraper.py  test_utils.py
tests/html/: 20230330.htm  empty_mensa.htm
tests/new-html/: bio.html  double.html  locid1.html  locid2.html  nutrition.html  wiener.html
tests/resources/: UL UNI Mensa Süd KW13 W3 expected.json
uniulm_mensaparser/: __init__.py  adapter.py  api.py  html_parser.py  mensaparser.py  models.py  pdf_parser.py  studierendenwerk_scraper.py  utils.py
