[project]
name = "uniulm-mensaparser"
version = "0.2.2"
description = "A parser for the canteen / Mensa plans at Ulm University"
authors = [
    { name = "Tanikai", email = "kai@anter.dev" }
]
dependencies = [
    "beautifulsoup4>=4.12.2",
    "aiohttp>=3.10.11",
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GPL-3.0" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Tanikai/uniulm_mensaparser"
"Bug Tracker" = "https://github.com/Tanikai/uniulm_mensaparser/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["uniulm_mensaparser"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
