[project]
name = "uniulm-mensaparser"
version = "1.0.0"
description = "A parser for the canteen / Mensa plans at Ulm University"
authors = [
    { name = "Tanikai", email = "kai@anter.dev" }
]
dependencies = [
    "beautifulsoup4>=4.12.2",
    "aiohttp>=3.10.11",
]
readme = "README.md"
requires-python = ">=3.8"
license = "GPL-3.0-only"
keywords = ["mensa", "ulm", "university", "parser", "canteen", "studierendenwerk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
"Homepage" = "https://github.com/Tanikai/uniulm_mensaparser"
"Bug Tracker" = "https://github.com/Tanikai/uniulm_mensaparser/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["uniulm_mensaparser"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM"]
ignore = []

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ty>=0.0.8",
]
